tdf#125289 Use default colors from the new standard palette

These look quite similar to the previous ones and
we have translatable strings for them

Change-Id: Ib40f4087830098341dcd32ce81673f6f187fe685
Reviewed-on: https://gerrit.libreoffice.org/77074
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>